--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
-        <title> Formulate</title>
-        <link rel="stylesheet"
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title> Formulate</title>
+    <link rel="stylesheet"
         href="styles.css">
-    </head>
-    <body>
-        <div class="container">
-            <h1 class="title"> Formulate</h1>
-            <p class="tagline">Design a website for your forms within seconds.
-                No code or manual input required.</p>
-                <div class="upload-area">
-                    <p> Drag and Drop a File (max size 50MB)</p>
-                    <input type="file" id="fileInput" class="hidden">
-                </div>
-        </div>
-        <script src="script.js"></script>
-    </body>
+  </head>
+  <body>
+    <div class="corner-button">
+      <a href="/"><img src="/images/Group17.png"
+        />
+      </a>
+    </div>
+    <div class="container">
+      <h1 class="title"> Formulate</h1>
+      <p class="tagline">Design a website for your forms within seconds.</br>
+          No code or manual input required.</p>
+          <div class="upload-area">
+              <p> Drag and Drop a File (max size 50MB)</p>
+              <input type="file" id="fileInput" class="hidden">
+          </div>
+    <script src="script.js"></script>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
